<resources>
    <string name="app_name">VarsityExercise</string>
    <string name="exercise_1">Exercise 1</string>
    <string name="exercise_2">Exercise 2</string>
    <string name="exercise_3">Exercise 3</string>
    <string name="exercise_4">Exercise 4</string>
    <string name="exercise_5">Exercise 5</string>
    <string name="exercise_6">Exercise 6</string>
    <string name="exercise_7">Exercise 7</string>
    <string name="exercise_8">Exercise 8</string>
    <string name="exercise_9">Exercise 9</string>
    <string name="exercise_10">Exercise 10</string>
    <string name="exercise_11">Exercise 11</string>
    <string name="exercise_12">Exercise 12</string>
    <string name="exercise_13">Exercise 13</string>
    <string name="exercise_14">Exercise 14</string>
    <string name="exercise_15">Exercise 15</string>
    <string name="exercise_16">Exercise 16</string>
    <string name="exercise_17">Exercise 17</string>
    <string name="exercise_18">Exercise 18</string>
    <string name="exercise_19">Exercise 19</string>
    <string name="exercise_20">Exercise 20</string>
    <string name="exercise_21">Exercise 21</string>
    <string name="cat">Cat</string>
    <string name="change_category">Change Category</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="dog">Dog</string>
    <string name="pet">Pet</string>
    <string name="evaluate">Evaluate</string>
    <string name="rating">rating</string>
    <string name="player_name">Player Name</string>
    <string name="start_game">START GAME</string>
    <string name="question">Question</string>
    <string name="true_">True</string>
    <string name="false_">False</string>
    <string name="result">Result</string>
    <string name="first_activity">First Activity</string>
    <string name="open_second_activity">OPEN SECOND ACTIVITY</string>
    <string name="second_activity">Second Activity</string>
    <string name="close_activity">Close Activity</string>
    <string name="multiply">MULTIPLY</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="the_result_is">The result is :</string>
    <string name="bigresulttext">BigResultText</string>
    <string name="calculate">CALCULATE</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="chose_favorite_animal">CHOSE FAVORITE ANIMAL</string>
    <string name="your_favorite_animal">your favorite animal</string>
    <string name="giraffe">Giraffe</string>
    <string name="class_mamelia">Class: Mamelia</string>
    <string name="order_cernivora">Order: Cernivora</string>
    <string name="leo">leo</string>
    <string name="emoij">emoij</string>
    <string name="actor_image">Actor Image</string>
    <string name="actor_name">Actor Name</string>
    <string name="Actor">TextView</string>
    <string name="_60k">60K</string>
    <string name="_123k">123k</string>
    <string name="_50k">50k</string>
    <string name="save">Save</string>
    <string name="save_value">Save Value</string>
    <string name="load_value">Load Value</string>
    <string name="e_g_erfurt">e.g Erfurt</string>
    <string name="show_on_map">SHOW ON MAP</string>
    <string name="title_activity_exercise16">exercise16</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">TextView</string>
    <string name="button1">Button1</string>
    <string name="button11">Button11</string>
    <string name="button4">Button4</string>
    <string name="button5">Button5</string>
    <string name="button51">Button51</string>
    <string name="button2">Button2</string>
    <string name="button57">Button57</string>
    <string name="button59">Button59</string>
    <string name="button16">Button16</string>
    <string name="button60">Button60</string>
    <string name="button18">Button18</string>
    <string name="button15">Button15</string>
    <string name="button17">Button17</string>
    <string name="button58">Button58</string>
    <string name="button10">Button10</string>
    <string name="button14">Button14</string>
    <string name="button13">Button13</string>
    <string name="button12">Button12</string>
    <string name="button7">Button7</string>
    <string name="button3">Button3</string>
    <string name="button52">Button52</string>
    <string name="button54">Button54</string>
    <string name="button56">Button56</string>
    <string name="button61">Button61</string>
    <string name="button55">Button55</string>
    <string name="button9">Button9</string>
    <string name="button19">Button19</string>
    <string name="button20">Button20</string>
    <string name="button22">Button22</string>
    <string name="button">Button</string>
    <string name="button6">Button6</string>
    <string name="button8">Button8</string>
    <string name="button21">Button21</string>
    <string name="spinner">Spinner</string>
    <string name="contact_email">Contact Email</string>
    <string name="todo">TODO</string>
    <string name="contact_name">Contact Name</string>

    <string-array name="students">
        <item>Sakib</item>
        <item>Nizam</item>
        <item>Rashed</item>
        <item>Nusrat</item>
        <item>Mahrin</item>
    </string-array>
</resources>