<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercise7Extra1">

    <TextView
        android:id="@+id/textViewTitle13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/exercise_7"
        android:textAlignment="center"
        android:textColor="#FAFAFA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonCat"
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/cat"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButtonDog"
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/dog"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonCat"
        app:srcCompat="@drawable/dog" />

    <ImageButton
        android:id="@+id/imageButtonGiraffe"
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/giraffe"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonDog"
        app:srcCompat="@drawable/giraffe" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnPrevious"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/previous"
            app:icon="@drawable/previous"
            app:iconGravity="textStart" />

        <Button
            android:id="@+id/btnHome"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/home"
            android:gravity="center"
            app:icon="@drawable/home"
            app:iconGravity="textStart" />

        <Button
            android:id="@+id/btnNext"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/next"
            app:icon="@drawable/next"
            app:iconGravity="textStart" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>